Fix the bugs and added the functionality of scrollbar and change the design of performance

--- a/owehub/gui/src/ui/pages/dashboard/dasboard.css
+++ b/owehub/gui/src/ui/pages/dashboard/dasboard.css
@@ -319,10 +319,42 @@ color: white;
 .breakdown-table {
   display: block;
   height: 100%;
-  overflow: auto;
+  overflow-y: auto;
+  scroll-behavior: smooth;
   white-space: nowrap;
  
 }
+.children-container{
+  background-color: var(--children-bg-color);
+  padding: 0.5rem 2rem;
+  flex: 1;
+  overflow-y: auto;
+  max-height: calc(100vh - 64px);
+  scroll-behavior: smooth;
+}
+.breakdown-table::-webkit-scrollbar {
+  width: auto; 
+  height: auto; 
+}
+.breakdown-table::-webkit-scrollbar {
+  display: initial
+}   
+
+.breakdown-table::-webkit-scrollbar-thumb {
+  background-color: rgb(173, 173, 173);
+  border-radius: 30px; 
+}
+.breakdown-table::-webkit-scrollbar-button {
+  display: initial; 
+}
+.breakdown-table::-webkit-scrollbar {
+  -ms-overflow-style: initial; 
+  scrollbar-width: thin;
+}
+.breakdown-table::-webkit-scrollbar-corner {
+  background-color: transparent;
+}
+
 .breakdown-table tbody {
   font-weight: 500;
 }
